--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -26,7 +26,7 @@ html * {
 
 body {
     overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
-    padding-top: 120px;
+    padding-top: 100px;
     background-color: #f2f2f2;
     font-weight: 300;
     font-size: 16px;
@@ -34,10 +34,6 @@ body {
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
 }
-
-/* BASE RULES */
-
-
 
 /* GENERAL */
 
@@ -63,6 +59,81 @@ a {
 }
 .navbar .nav li a.btn:hover {
     color: inherit;
+}
+
+/* TIMEMAP */
+
+#timemap #timelinecontainer {
+    width: 100%;
+    height: 200px;
+    cursor: ew-resize;
+}
+
+#timemap #timelinecontainer #timeline {
+    width: 100%;
+    height: 100%;
+    font-size: 12px;
+}
+
+#timemap #timelinecontainer .timeline-copyright {
+    display: none;
+}
+
+#timemap #timelinecontainer .timeline-band-0 .timeline-ether-bg {
+    background-color: #f2f2f2;
+}
+
+#timemap #timelinecontainer .timeline-band-1 .timeline-ether-bg {
+    background-color: #222;
+}
+
+#timemap #timelinecontainer .timeline-band-1 .timeline-ether-highlight {
+    background-color: #f2f2f2;
+    top: 0;
+    height: 100% !important;
+    opacity: 1 !important;
+}
+
+#timemap #timelinecontainer .timeline-band-0 .timeline-ether-lines {
+    border-color: #999;
+    border-style: dashed;
+}
+
+#timemap #mapcontainer {
+    width: 100%;
+    height: 380px;
+}
+
+#timemap #mapcontainer #map {
+    width: 100%;
+    height: 100%;
+}
+
+p.content {
+font-size: 12px;
+width: 30em;
+}
+
+div#help {
+font-size: 12px;
+width: 45em;
+padding: 1em;
+}
+
+div.infotitle {
+    font-size: 14px;
+    font-weight: bold;
+}
+div.infodescription {
+    font-size: 14px;
+    font-style: italic;
+}
+
+div.custominfostyle {
+    font-family: Georgia, Garamond, serif;
+    font-size: 1.5em;
+    font-style: italic;
+    width: 20em;
 }
 
 
