--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -67,6 +67,10 @@ a {
     width: 100%;
     height: 200px;
     cursor: ew-resize;
+    -moz-user-select: none; 
+    -khtml-user-select: none; 
+    -webkit-user-select: none; 
+    -o-user-select: none; 
 }
 
 #timemap #timelinecontainer #timeline {
