--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Montserrat);
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 /* FONT STACK */
 
@@ -18,6 +18,7 @@ html {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    height: 100%;
 }
 
 html * {
@@ -28,17 +29,22 @@ body {
     overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
     padding-top: 100px;
     background-color: #f2f2f2;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 16px;
     color: #555;
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
+    height: 100%;
 }
 
 /* GENERAL */
 
 a {
     transition: .2s all ease;
+}
+
+.text-bold {
+    font-weight: 700;
 }
 
 .navbar {
@@ -63,9 +69,13 @@ a {
 
 /* TIMEMAP */
 
+#page-body, #timemap {
+    height: 100%;
+}
+
 #timemap #timelinecontainer {
     width: 100%;
-    height: 200px;
+    height: 30%;
     cursor: ew-resize;
     -moz-user-select: none; 
     -khtml-user-select: none; 
@@ -105,7 +115,7 @@ a {
 
 #timemap #mapcontainer {
     width: 100%;
-    height: 380px;
+    height: 70%;
 }
 
 #timemap #mapcontainer #map {
@@ -134,13 +144,13 @@ div.infodescription {
 }
 
 div.custominfostyle {
-    font-family: Georgia, Garamond, serif;
-    font-size: 1.5em;
-    font-style: italic;
-    width: 20em;
+    font-family: "Montserrat", sans-serif !important;
+    font-size: 13px;
+    width: 200px;
+    overflow: hidden;
+    padding: 10px;
+    line-height: 24px;
 }
-
-
 
 
 
