--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -40,6 +40,8 @@ body {
 .container-fluid {
     height: 100%;
     width: 100%;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 /* UI COMPONENTS */
@@ -112,6 +114,10 @@ body {
     color: #fff !important;
 }
 
+.panel-heading .btn {
+    margin-right: 10px;
+}
+
 .panel-title {
     font-size: 14px !important;
     display: inline-block;
@@ -120,6 +126,7 @@ body {
 
 .panel-body {
     padding: 20px !important;
+    font-size: 14px !important;
 }
 
 .panel-heading.panel-default {
