--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -159,8 +159,63 @@ body {
 #loading {
     position: absolute;
     top: 30%;
-    left: 50%;
+    left: 45%;
     color: #ccc;
+    text-align: center;
+}
+
+#loading h1 {
+    padding: 30px 0;
+}
+
+@-webkit-keyframes tada {
+	0% {-webkit-transform: scale(1);}	
+	10%, 20% {-webkit-transform: scale(1) rotate(-2deg);}
+	30%, 50%, 70%, 90% {-webkit-transform: scale(1) rotate(3deg);}
+	40%, 60%, 80% {-webkit-transform: scale(1) rotate(-2deg);}
+	100% {-webkit-transform: scale(1) rotate(0);}
+}
+
+@-moz-keyframes tada {
+	0% {-webkit-transform: scale(1);}	
+	10%, 20% {-webkit-transform: scale(1) rotate(-2deg);}
+	30%, 50%, 70%, 90% {-webkit-transform: scale(1) rotate(3deg);}
+	40%, 60%, 80% {-webkit-transform: scale(1) rotate(-2deg);}
+	100% {-webkit-transform: scale(1) rotate(0);}
+}
+
+@keyframes tada {
+	0% {-webkit-transform: scale(1);}	
+	10%, 20% {-webkit-transform: scale(1) rotate(-2deg);}
+	30%, 50%, 70%, 90% {-webkit-transform: scale(1) rotate(3deg);}
+	40%, 60%, 80% {-webkit-transform: scale(1) rotate(-2deg);}
+	100% {-webkit-transform: scale(1) rotate(0);}
+}
+
+.animated {
+	-webkit-animation-duration: 1s;
+	   -moz-animation-duration: 1s;
+	     -o-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-fill-mode: both;
+	   -moz-animation-fill-mode: both;
+	     -o-animation-fill-mode: both;
+	        animation-fill-mode: both;
+  	-webkit-animation-iteration-count: infinite;
+	   -moz-animation-iteration-count: infinite;
+	     -o-animation-iteration-count: infinite;
+	        animation-iteration-count: infinite;
+	-webkit-animation-direction: alternate;
+	   -moz-animation-direction: alternate;
+	     -o-animation-direction: alternate;
+	        animation-direction: alternate;
+}
+
+#loading i {
+    -webkit-animation-name: tada;
+    -moz-animation-name: tada;
+    -o-animation-name: tada;
+    animation-name: tada;
 }
 
 .v-offset {
