--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -44,6 +44,15 @@ body {
     padding-right: 0;
 }
 
+.title {
+    padding-bottom: 20px;
+    color: #ccc;
+}
+
+.table {
+    margin-bottom: 0;
+}
+
 /* UI COMPONENTS */
 
 .btn {
