--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -30,7 +30,7 @@ body {
     padding-top: 100px;
     background-color: #f2f2f2;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 14px;
     color: #555;
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
@@ -47,10 +47,15 @@ body {
 .title {
     padding-bottom: 20px;
     color: #ccc;
+    display: inline-block;
 }
 
 .table {
     margin-bottom: 0;
+}
+
+#cke_content {
+    width: 100% !important;
 }
 
 /* UI COMPONENTS */
