Add simulator page

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -444,3 +444,9 @@ div.custominfostyle {
 .article-raw p {
     white-space: normal;
 }
+
+/* SIMULATOR */
+
+.simulator-help {
+    line-height: 24px;
+}
